--- a/HTML/05HTML/05 Base/forms.html
+++ b/HTML/05HTML/05 Base/forms.html
@@ -12,7 +12,7 @@
        <col width="50%">
 <tr>
     <td>
-        <p><strong>Простая форма поиска с вариантами11:</strong></p>
+        <p><strong>Простая форма поиска с вариантами:</strong></p>
 <form action=" http://fe.it-academy.by/TestForm.php" name="SearchRequest" method="get">
 <fieldset>
 <legend>Строка поиска</legend>
