--- a/CSS/02CSS/Base03/blocks.html
+++ b/CSS/02CSS/Base03/blocks.html
@@ -9,14 +9,22 @@
 
 </head>
 <body>
-    <ul>
-        <li class="title"><strong >Блок навигации</strong>
-         <ul>
+    <strong class="title1">Блок навигации</strong><br>
+    <ul> 
           <li>Ширина 15em</li>
           <li>Должен присутствовать цвет фона</li>
           <li>Располагается слева</li>
           <li>Блок навигации наполните контентом достаточным, чтобы по высоте он начинал захватывать вторую статью, как показано в данном примере</li>
-         </ul>
-    </ul>     
+         </ul> 
+     <div>
+        <strong>Статья 1</strong> 
+    <p>
+        
+        Размер блока:<br>
+Занимает всю доступную ширину<br>
+Должен присутствовать цвет фона<br>
+Во всех "статьях" сделать отступ снизу от соседей равным 2em, при помощи свойства margin-bottom 
+    </p>
+</div>
 </body>
 </html>
