--- a/CSS/02CSS/Base01/cards.html
+++ b/CSS/02CSS/Base01/cards.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div style=
+    <div class="one" style=
     "background-image: url('cards.7e0a18f0.png');
      background-repeat: no-repeat;
      width: 138px;
@@ -20,6 +20,7 @@
 <div style=
       "background-image: url('cards.7e0a18f0.png');
        background-repeat: no-repeat;
+       margin-left: -117px;
        width: 140px;
     height: 190px;
     background-position: 0px -1793px;
@@ -27,22 +28,25 @@
 </div>
 <div style=
         "background-image: url('cards.7e0a18f0.png');
-width: 150px;
+    width: 148px;
+    margin-left: -117px;
     height: 190px;
-    background-position: -283px -1393px;
+    background-position: -289px -1393px;
 ">
 </div>
 <div style=
           "background-image: url('cards.7e0a18f0.png');
            background-repeat: no-repeat;
+           margin-left: -117px;
            width: 148px;
     height: 194px;
-    background-position: -140px -2185px;
+    background-position: -144px -2185px;
 ">
 </div>
 <div style=
             "background-image: url('cards.7e0a18f0.png');
              background-repeat: no-repeat;
+             margin-left: -117px;
              width: 148px;
     height: 190px;
     background-position: 4px -2386px;
