--- a/CSS/02CSS/Base02/list.html
+++ b/CSS/02CSS/Base02/list.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styleList2.css"/>
+    <link rel="stylesheet" href="styleList.css"/>
 </head>
 <body>
+    <p>
+        #!/usr/bin/env python <br>
+       print 'Hello. I am a python program.' <br>
+       name = raw_input("What is your name?") <br>
+       print "Hello there, " + name + "!" <br>
+       </p>
 <ul>
     <li class="title"><strong >Контейнер с кодом</strong>
      <ul>
