--- a/CSS/02CSS/Base03/blocks.html
+++ b/CSS/02CSS/Base03/blocks.html
@@ -8,23 +8,43 @@
     <link rel="stylesheet" href="styleNavigation.css"/>
 
 </head>
+
 <body>
+    <div class="wrap">
+    <div class="Left">
     <strong class="title1">Блок навигации</strong><br>
-    <ul> 
+    <ul class="NvBlock"> 
           <li>Ширина 15em</li>
           <li>Должен присутствовать цвет фона</li>
           <li>Располагается слева</li>
           <li>Блок навигации наполните контентом достаточным, чтобы по высоте он начинал захватывать вторую статью, как показано в данном примере</li>
          </ul> 
-     <div>
-        <strong>Статья 1</strong> 
-    <p>
-        
-        Размер блока:<br>
+         
+</div>
+
+<div class="RightTop">
+<strong>Статья 1</strong> 
+<p>
+Размер блока:<br>
 Занимает всю доступную ширину<br>
 Должен присутствовать цвет фона<br>
 Во всех "статьях" сделать отступ снизу от соседей равным 2em, при помощи свойства margin-bottom 
-    </p>
+</p>
 </div>
+<div class="RightBottom">
+    <strong>Статья 2</strong> 
+    <p>
+    Размер блока:<br>
+    Занимает всю доступную ширину<br>
+    Должен присутствовать цвет фона<br>
+    Во всех "статьях" сделать отступ снизу от соседей равным 2em, при помощи свойства margin-bottom. Картинка вставлена при помощи тега, плавание организовано по правому краю внутри данной статьи для это картинки. 
+    </p>
+    <img class="pic" src="11.png" alt="">
+    <div class="Goom"></div>
+</div>
+
+</div>
+<div class="footer">Нижний блок, подвал. Занимает всю доступную ширину. Высота определятеся помещенным внутрь контентом.</div>
+
 </body>
 </html>
