--- a/CSS/04CSS/Base01/doc.html
+++ b/CSS/04CSS/Base01/doc.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    
+    <h1>Форматы файлов</h1>
+    <div>
+DOC-файл (от англ. <img src="arrow.png"><a href=" ">document</a> ) – текстовый документ, который еще до недавнего времени можно было создать и изменить лишь посредством программы Microsoft Office Word.
+Раньше DOC-файлы включали лишь форматированный текст, однако прогресс не стоит на месте, а потому сегодня в них могут быть добавлены различные встроенные объекты, такие как: таблицы, графики, мультимедия.Word 2003 – последняя версия, в которой в качестве основного формата использовался DOC. <br>
+<a href=" ">Документ MS Word</a><img src="word.png">
+</div>
+<div>
+    Формат переносимых документов (<img src="pdf.png"><a href=" ">PDF</a>) представляет собой универсальный файловый формат, который позволяет сохранить шрифты, изображения и сам макет исходного документа независимо от того, на какой из множества платформ и в каком из множества приложений такой документ создавался.<br>
+    <a href=" ">Документ PDF</a><img src="pdf.png">
+</div>
+<div>
+    Zip — это широко применимый формат архивирования файлов, который используется для сжатия одного или нескольких файлов в одном месте, имеет расширение <img src="arrow.png"><a href=" ">.zip</a> что позволяет сократить их общий размер и упрощает передачу данных. <br>
+    <a href=" ">Архив</a><img src="zip.gif">
+</div>
+<h2>Это список файлов</h2>
+<img src="dock.png"><a class="pic" href="#">Документ MS Word<span><img src="word.png"/></span></a> <br>
+<img src="dock.png"><a class="pic" href="#">Документ PDF<span><img src="pdf.png"/></span></a> <br>
+<img src="dock.png"><a class="pic" href="#">Архив<span><img src="zip.gif"/></span></a> <br>
 </body>
 </html>
